k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    alpha.image.policy.openshift.io/resolve-names: '*'
    app.openshift.io/route-disabled: "false"
  labels:
    app: quinoa-wind-turbine
    app.kubernetes.io/component: quinoa-wind-turbine
    app.kubernetes.io/instance: quinoa-wind-turbine
    app.kubernetes.io/name: quinoa-wind-turbine
    app.kubernetes.io/part-of: wind-turbine
    app.openshift.io/runtime: quarkus
  name: quinoa-wind-turbine
spec:
  progressDeadlineSeconds: 600
  replicas: 5
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: quinoa-wind-turbine
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: quinoa-wind-turbine
        deployment: quinoa-wind-turbine
      annotations:
        sidecar.istio.io/inject: 'true'
    spec:
      containers:
      - env:
        - name: QUARKUS_PROFILE
          value: openshift-cluster
        - name: INFINISPAN_PASSWORD
          valueFrom:
            secretKeyRef:
              key: password
              name: infinispan-generated-secret
        image: quay.io/bassomkv/quinoa-wind-turbine:1.0.0
        imagePullPolicy: IfNotPresent
        name: quinoa-wind-turbine
        ports:
        - containerPort: 8080
          protocol: TCP
        - containerPort: 8443
          protocol: TCP
        resources: {}
        readinessProbe:
          httpGet:
            scheme: HTTP
            path: /q/health/ready
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 5
        livenessProbe:
          httpGet:
            scheme: HTTP
            path: /q/health/live
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 5
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
